--- a/Editor/com.facticus.skilltree.Editor.asmdef
+++ b/Editor/com.facticus.skilltree.Editor.asmdef
@@ -1,6 +1,10 @@
 {
-    "name": "com.{{COMPANY}}.{{REPOSITORY_NAME}}.Editor",
-    "references": [],
+    "name": "com.facticus.skilltree.Editor",
+    "rootNamespace": "",
+    "references": [
+        "GUID:70ef9a24f4cfc4aec911c1414e3f90ad",
+        "GUID:d1e08c06f8f9473888c892637c83c913"
+    ],
     "includePlatforms": [
         "Editor"
     ],
