--- a/Runtime/com.facticus.skilltree.asmdef
+++ b/Runtime/com.facticus.skilltree.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "com.{{COMPANY}}.{{REPOSITORY_NAME}}",
+    "name": "com.facticus.skilltree",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
