--- a/Tests/Editor/com.facticus.skilltree.EditorTests.asmdef
+++ b/Tests/Editor/com.facticus.skilltree.EditorTests.asmdef
@@ -1,7 +1,7 @@
 {
-  "name": "com.{{COMPANY}}.{{REPOSITORY_NAME}}.Tests",
+  "name": "com.facticus.skilltree.Editor.Tests",
   "references": [
-    "Unity.com.{{COMPANY}}.{{REPOSITORY_NAME}}"
+    "com.facticus.skilltree"
   ],
   "optionalUnityReferences": [
     "TestAssemblies"
