--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "com.{{COMPANY}}.{{REPOSITORY_NAME}}",
+  "name": "com.facticus.skilltree",
   "version": "0.2.2",
-  "displayName": "{{FRIENDLY_NAME}}",
-  "description": "{{DESCRIPTION}}",
-  "unity": "{{UNITY_VERSION}}",
+  "displayName": "Skill Tree",
+  "description": "A generic, extendable, and data oriented skill tree implementation for Unity",
+  "unity": "6000.2.0",
   "unityRelease": "",
   "dependencies": {},
   "keywords": [],
   "author": {
-    "name": "{{COMPANY_FRIENDLY_NAME}}",
-    "email": "{{REPORT_EMAIL}}",
-    "url": "{{COMPANY_WEBSITE}}"
+    "name": "Facticus",
+    "email": "",
+    "url": ""
   },
   "repository": {
     "type": "git",
-    "url": "{{GIT_REPOSITORY}}"
+    "url": "https://github.com/mnicolas94/facticus-skilltree.git"
   },
   "license": "MIT"
 }
